--- a/Forsaj/Forsaj.csproj
+++ b/Forsaj/Forsaj.csproj
@@ -53,6 +53,7 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
     <PackageReference Include="System.DirectoryServices" Version="5.0.0" />
+    <PackageReference Include="Tinify" Version="1.5.2" />
   </ItemGroup>
 
 </Project>
