--- a/Forsaj/app.config
+++ b/Forsaj/app.config
@@ -2,7 +2,7 @@
 <configuration>
 
   <connectionStrings>
-    <add name="TENDER" connectionString="Server =(localdb)\ProjectsV13;Database =DB_FORSAJ;Trusted_Connection = True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=true;" />
+    <add name="TENDER" connectionString="Server =Data Source=(localdb)\\ProjectsV13;Initial Catalog=DB_FORSAJ; Trusted_Connection=True; MultipleActiveResultSets=true" />
 
   </connectionStrings>
 </configuration>
