--- a/Forsaj/appsettings.json
+++ b/Forsaj/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "AppSettings": {
     "ConnectionString": {
-      "Default": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=DB_FORSAJ; Integrated Security=True; Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=true"
+      "Default": "Data Source=(localdb)\\ProjectsV13; Initial Catalog=DB_FORSAJ; Trusted_Connection=True; MultipleActiveResultSets=true"
 
     }
     
